--- a/data/cards/05376159.yaml
+++ b/data/cards/05376159.yaml
@@ -48,6 +48,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SDCK-EN035
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: ETCO-DE074
     set_name: Eternity Code
@@ -55,6 +59,10 @@ sets:
     - Super Rare
   - set_number: MP21-DE084
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Common
+  - set_number: SDCK-DE035
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -66,6 +74,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SDCK-FR035
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: ETCO-IT074
     set_name: Eternity Code
@@ -75,6 +87,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SDCK-IT035
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: ETCO-PT074
     set_name: Eternity Code
@@ -82,6 +98,10 @@ sets:
     - Super Rare
   - set_number: MP21-PT084
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Common
+  - set_number: SDCK-PT035
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
