--- a/data/cards/08559524.yaml
+++ b/data/cards/08559524.yaml
@@ -50,6 +50,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SDCK-EN029
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: ETCO-DE062
     set_name: Eternity Code
@@ -57,6 +61,10 @@ sets:
     - Common
   - set_number: MP21-DE077
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Common
+  - set_number: SDCK-DE029
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -68,6 +76,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SDCK-FR029
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: ETCO-IT062
     set_name: Eternity Code
@@ -77,6 +89,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SDCK-IT029
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: ETCO-PT062
     set_name: Eternity Code
@@ -84,6 +100,10 @@ sets:
     - Common
   - set_number: MP21-PT077
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Common
+  - set_number: SDCK-PT029
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
