--- a/data/cards/09753964.yaml
+++ b/data/cards/09753964.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-EN042
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: HSRD-DE041
     set_name: High-Speed Riders
@@ -84,6 +88,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-DE042
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: HSRD-FR041
     set_name: High-Speed Riders
@@ -97,6 +105,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-FR042
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: HSRD-IT041
     set_name: High-Speed Riders
@@ -110,6 +122,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-IT042
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: HSRD-PT041
     set_name: High-Speed Riders
@@ -123,6 +139,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-PT042
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: SPHR-JP040
     set_name: 'Booster SP: Highspeed Riders'
