--- a/data/cards/14886469.yaml
+++ b/data/cards/14886469.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: 'Duelist Pack: Dimensional Guardians'
     rarities:
     - Common
+  - set_number: SDCK-EN011
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: HSRD-DE015
     set_name: High-Speed Riders
@@ -59,6 +63,10 @@ sets:
     - Super Rare
   - set_number: DPDG-DE027
     set_name: 'Duelist Pack: Dimensional Guardians'
+    rarities:
+    - Common
+  - set_number: SDCK-DE011
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -70,6 +78,10 @@ sets:
     set_name: 'Duelist Pack: Dimensional Guardians'
     rarities:
     - Common
+  - set_number: SDCK-FR011
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: HSRD-IT015
     set_name: High-Speed Riders
@@ -79,6 +91,10 @@ sets:
     set_name: 'Duelist Pack: Dimensional Guardians'
     rarities:
     - Common
+  - set_number: SDCK-IT011
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: HSRD-PT015
     set_name: High-Speed Riders
@@ -86,6 +102,10 @@ sets:
     - Super Rare
   - set_number: DPDG-PT027
     set_name: 'Duelist Pack: Dimensional Guardians'
+    rarities:
+    - Common
+  - set_number: SDCK-PT011
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
