--- a/data/cards/15576074.yaml
+++ b/data/cards/15576074.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-EN027
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: STOR-DE056
     set_name: Storm of Ragnarok
@@ -67,6 +71,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-DE027
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: STOR-FR056
     set_name: Storm of Ragnarok
@@ -80,6 +88,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-FR027
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: STOR-IT056
     set_name: Storm of Ragnarok
@@ -93,6 +105,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-IT027
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: LC5D-PT075
     set_name: Legendary Collection 5D's Mega Pack
@@ -102,6 +118,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-PT027
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: STOR-JP056
     set_name: Storm of Ragnarok
