--- a/data/cards/16209941.yaml
+++ b/data/cards/16209941.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: SDCK-EN023
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: CYHO-DE084
     set_name: Cybernetic Horizon
@@ -69,6 +73,10 @@ sets:
     - Prismatic Secret Rare
   - set_number: SDSA-DE018
     set_name: 'Structure Deck: Sacred Beasts'
+    rarities:
+    - Common
+  - set_number: SDCK-DE023
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -84,6 +92,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: SDCK-FR023
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: CYHO-IT084
     set_name: Cybernetic Horizon
@@ -97,6 +109,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: SDCK-IT023
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: CYHO-PT084
     set_name: Cybernetic Horizon
@@ -108,6 +124,10 @@ sets:
     - Prismatic Secret Rare
   - set_number: SDSA-PT018
     set_name: 'Structure Deck: Sacred Beasts'
+    rarities:
+    - Common
+  - set_number: SDCK-PT023
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
