--- a/data/cards/19665973.yaml
+++ b/data/cards/19665973.yaml
@@ -88,6 +88,10 @@ sets:
     set_name: 'Starter Deck: Codebreaker'
     rarities:
     - Common
+  - set_number: SDCK-EN010
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   - set_number: DT06-EN015
     set_name: Duel Terminal 6a
     rarities:
@@ -136,6 +140,10 @@ sets:
     set_name: 'Starter Deck: Codebreaker'
     rarities:
     - Common
+  - set_number: SDCK-DE010
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: ABPF-FR006
     set_name: Absolute Powerforce
@@ -178,6 +186,10 @@ sets:
     - Common
   - set_number: YS18-FR019
     set_name: 'Starter Deck: Codebreaker'
+    rarities:
+    - Common
+  - set_number: SDCK-FR010
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   it:
@@ -224,6 +236,10 @@ sets:
     set_name: 'Starter Deck: Codebreaker'
     rarities:
     - Common
+  - set_number: SDCK-IT010
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: BP02-PT086
     set_name: 'Battle Pack 2: War of the Giants'
@@ -248,6 +264,10 @@ sets:
     - Common
   - set_number: YS18-PT019
     set_name: 'Starter Deck: Codebreaker'
+    rarities:
+    - Common
+  - set_number: SDCK-PT010
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
