--- a/data/cards/23008320.yaml
+++ b/data/cards/23008320.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-EN028
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: EXVC-DE047
     set_name: Extreme Victory
@@ -83,6 +87,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-DE028
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: EXVC-FR047
     set_name: Extreme Victory
@@ -104,6 +112,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-FR028
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: EXVC-IT047
     set_name: Extreme Victory
@@ -125,6 +137,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-IT028
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: LC5D-PT078
     set_name: Legendary Collection 5D's Mega Pack
@@ -142,6 +158,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-PT028
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: EXVC-JP047
     set_name: Extreme Victory
