--- a/data/cards/27503418.yaml
+++ b/data/cards/27503418.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Duelist Pack: Dimensional Guardians'
     rarities:
     - Rare
+  - set_number: SDCK-EN034
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: INOV-DE067
     set_name: 'Invasion: Vengeance'
@@ -62,6 +66,10 @@ sets:
     set_name: 'Duelist Pack: Dimensional Guardians'
     rarities:
     - Rare
+  - set_number: SDCK-DE034
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: INOV-FR067
     set_name: 'Invasion: Vengeance'
@@ -71,6 +79,10 @@ sets:
     set_name: 'Duelist Pack: Dimensional Guardians'
     rarities:
     - Rare
+  - set_number: SDCK-FR034
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: INOV-IT067
     set_name: 'Invasion: Vengeance'
@@ -80,6 +92,10 @@ sets:
     set_name: 'Duelist Pack: Dimensional Guardians'
     rarities:
     - Rare
+  - set_number: SDCK-IT034
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: INOV-PT067
     set_name: 'Invasion: Vengeance'
@@ -89,6 +105,10 @@ sets:
     set_name: 'Duelist Pack: Dimensional Guardians'
     rarities:
     - Rare
+  - set_number: SDCK-PT034
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: INOV-JP067
     set_name: 'Invasion: Vengeance'
