--- a/data/cards/34761841.yaml
+++ b/data/cards/34761841.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SDCK-EN008
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: ETCO-DE017
     set_name: Eternity Code
@@ -61,6 +65,10 @@ sets:
     - Common
   - set_number: MP21-DE053
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Common
+  - set_number: SDCK-DE008
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -72,6 +80,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SDCK-FR008
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: ETCO-IT017
     set_name: Eternity Code
@@ -81,6 +93,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Common
+  - set_number: SDCK-IT008
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: ETCO-PT017
     set_name: Eternity Code
@@ -88,6 +104,10 @@ sets:
     - Common
   - set_number: MP21-PT053
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Common
+  - set_number: SDCK-PT008
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
