--- a/data/cards/36857073.yaml
+++ b/data/cards/36857073.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-EN043
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: HSRD-DE042
     set_name: High-Speed Riders
@@ -82,6 +86,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-DE043
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: HSRD-FR042
     set_name: High-Speed Riders
@@ -95,6 +103,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-FR043
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: HSRD-IT042
     set_name: High-Speed Riders
@@ -108,6 +120,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-IT043
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: HSRD-PT042
     set_name: High-Speed Riders
@@ -121,6 +137,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-PT043
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: SPHR-JP041
     set_name: 'Booster SP: Highspeed Riders'
