--- a/data/cards/45313993.yaml
+++ b/data/cards/45313993.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SDCK-EN012
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: TDIL-DE014
     set_name: The Dark Illusion
@@ -67,6 +71,10 @@ sets:
     - Common
   - set_number: MP17-DE069
     set_name: 2017 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SDCK-DE012
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -82,6 +90,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SDCK-FR012
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: TDIL-IT014
     set_name: The Dark Illusion
@@ -95,6 +107,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SDCK-IT012
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: TDIL-PT014
     set_name: The Dark Illusion
@@ -106,6 +122,10 @@ sets:
     - Common
   - set_number: MP17-PT069
     set_name: 2017 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SDCK-PT012
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
