--- a/data/cards/49238328.yaml
+++ b/data/cards/49238328.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
+  - set_number: SDCK-EN031
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: SAST-DE067
     set_name: Savage Strike
@@ -87,6 +91,10 @@ sets:
     - Premium Gold Rare
   - set_number: SDAZ-DE028
     set_name: 'Structure Deck: Albaz Strike'
+    rarities:
+    - Common
+  - set_number: SDCK-DE031
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -111,6 +119,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: SDCK-FR031
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: SAST-IT067
     set_name: Savage Strike
@@ -133,6 +145,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: SDCK-IT031
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: SAST-PT067
     set_name: Savage Strike
@@ -153,6 +169,10 @@ sets:
     - Premium Gold Rare
   - set_number: SDAZ-PT028
     set_name: 'Structure Deck: Albaz Strike'
+    rarities:
+    - Common
+  - set_number: SDCK-PT031
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
