--- a/data/cards/50078509.yaml
+++ b/data/cards/50078509.yaml
@@ -86,6 +86,10 @@ sets:
     set_name: 'Structure Deck: Freezing Chains'
     rarities:
     - Common
+  - set_number: SDCK-EN037
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: ABPF-DE064
     set_name: Absolute Powerforce
@@ -130,6 +134,10 @@ sets:
     - Ultra Rare
   - set_number: SDFC-DE036
     set_name: 'Structure Deck: Freezing Chains'
+    rarities:
+    - Common
+  - set_number: SDCK-DE037
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -178,6 +186,10 @@ sets:
     set_name: 'Structure Deck: Freezing Chains'
     rarities:
     - Common
+  - set_number: SDCK-FR037
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: ABPF-IT064
     set_name: Absolute Powerforce
@@ -224,6 +236,10 @@ sets:
     set_name: 'Structure Deck: Freezing Chains'
     rarities:
     - Common
+  - set_number: SDCK-IT037
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: SDBE-PT034
     set_name: Saga of Blue-Eyes White Dragon Structure Deck
@@ -255,6 +271,10 @@ sets:
     - Ultra Rare
   - set_number: SDFC-PT036
     set_name: 'Structure Deck: Freezing Chains'
+    rarities:
+    - Common
+  - set_number: SDCK-PT037
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
