--- a/data/cards/54343893.yaml
+++ b/data/cards/54343893.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: High-Speed Riders
     rarities:
     - Common
+  - set_number: SDCK-EN009
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   - set_number: DDY1-EN001
     set_name: Duel Disk - Yusei Version
     rarities:
@@ -94,6 +98,10 @@ sets:
     set_name: High-Speed Riders
     rarities:
     - Common
+  - set_number: SDCK-DE009
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: GLD3-FR002
     set_name: Gold Series 3
@@ -113,6 +121,10 @@ sets:
     - Common
   - set_number: HSRD-FR021
     set_name: High-Speed Riders
+    rarities:
+    - Common
+  - set_number: SDCK-FR009
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   it:
@@ -136,6 +148,10 @@ sets:
     set_name: High-Speed Riders
     rarities:
     - Common
+  - set_number: SDCK-IT009
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: LC5D-PT059
     set_name: Legendary Collection 5D's Mega Pack
@@ -147,6 +163,10 @@ sets:
     - Common
   - set_number: HSRD-PT021
     set_name: High-Speed Riders
+    rarities:
+    - Common
+  - set_number: SDCK-PT009
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
