--- a/data/cards/60990740.yaml
+++ b/data/cards/60990740.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: SDCK-EN016
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: PGL2-DE002
     set_name: 'Premium Gold: Return of the Bling'
@@ -75,6 +79,10 @@ sets:
     - Rare
   - set_number: SR13-DE024
     set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
+  - set_number: SDCK-DE016
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -94,6 +102,10 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: SDCK-FR016
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: PGL2-IT002
     set_name: 'Premium Gold: Return of the Bling'
@@ -111,6 +123,10 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: SDCK-IT016
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: PGL2-PT002
     set_name: 'Premium Gold: Return of the Bling'
@@ -126,6 +142,10 @@ sets:
     - Rare
   - set_number: SR13-PT024
     set_name: 'Structure Deck: Dark World'
+    rarities:
+    - Common
+  - set_number: SDCK-PT016
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
