--- a/data/cards/68490573.yaml
+++ b/data/cards/68490573.yaml
@@ -44,26 +44,46 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: SDCK-EN036
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: MAZE-DE017
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: SDCK-DE036
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: MAZE-FR017
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: SDCK-FR036
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: MAZE-IT017
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: SDCK-IT036
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: MAZE-PT017
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: SDCK-PT036
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: HC01-JP020
     set_name: History Archive Collection
