--- a/data/cards/71821687.yaml
+++ b/data/cards/71821687.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: SDCK-EN021
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: LED5-DE024
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -64,6 +68,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: SDCK-DE021
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: LED5-FR024
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -73,6 +81,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: SDCK-FR021
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: LED5-IT024
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -82,6 +94,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: SDCK-IT021
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: LED5-PT024
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -91,6 +107,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: SDCK-PT021
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: DP22-JP024
     set_name: 'Duelist Pack: Legend Duelist 5'
