--- a/data/cards/74644400.yaml
+++ b/data/cards/74644400.yaml
@@ -48,26 +48,46 @@ sets:
     set_name: Dark Neostorm
     rarities:
     - Rare
+  - set_number: SDCK-EN019
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: DANE-DE010
     set_name: Dark Neostorm
     rarities:
     - Rare
+  - set_number: SDCK-DE019
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: DANE-FR010
     set_name: Dark Neostorm
     rarities:
     - Rare
+  - set_number: SDCK-FR019
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: DANE-IT010
     set_name: Dark Neostorm
     rarities:
     - Rare
+  - set_number: SDCK-IT019
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: DANE-PT010
     set_name: Dark Neostorm
     rarities:
     - Rare
+  - set_number: SDCK-PT019
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: DANE-JP010
     set_name: Dark Neostorm
