--- a/data/cards/78010363.yaml
+++ b/data/cards/78010363.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Rare
+  - set_number: SDCK-EN024
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   - set_number: MRD-116
     set_name: Metal Raiders
     rarities:
@@ -127,6 +131,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Rare
+  - set_number: SDCK-DE024
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: MRD-F116
     set_name: Metal Raiders
@@ -165,6 +173,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Rare
+  - set_number: SDCK-FR024
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: MIP-I014
     set_name: 'Starter Deck: Pegasus'
@@ -203,6 +215,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Rare
+  - set_number: SDCK-IT024
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: PMT-P116
     set_name: Metal Raiders
@@ -232,6 +248,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Rare
+  - set_number: SDCK-PT024
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: ''
     set_name: Vol.6
