--- a/data/cards/78275321.yaml
+++ b/data/cards/78275321.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: SDCK-EN020
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: ABPF-DE020
     set_name: Absolute Powerforce
@@ -77,6 +81,10 @@ sets:
     - Common
   - set_number: LDS3-DE046
     set_name: 'Legendary Duelists: Season 3'
+    rarities:
+    - Common
+  - set_number: SDCK-DE020
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -96,6 +104,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: SDCK-FR020
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: ABPF-IT020
     set_name: Absolute Powerforce
@@ -113,6 +125,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: SDCK-IT020
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: LC5D-PT224
     set_name: Legendary Collection 5D's Mega Pack
@@ -124,6 +140,10 @@ sets:
     - Common
   - set_number: LDS3-PT046
     set_name: 'Legendary Duelists: Season 3'
+    rarities:
+    - Common
+  - set_number: SDCK-PT020
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
