--- a/data/cards/97489701.yaml
+++ b/data/cards/97489701.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: High-Speed Riders
     rarities:
     - Rare
+  - set_number: SDCK-EN046
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: CT07-DE005
     set_name: Collectible Tins 2010 Wave 2
@@ -91,6 +95,10 @@ sets:
     set_name: High-Speed Riders
     rarities:
     - Rare
+  - set_number: SDCK-DE046
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: CT07-FR005
     set_name: Collectible Tins 2010 Wave 2
@@ -109,6 +117,10 @@ sets:
     set_name: High-Speed Riders
     rarities:
     - Rare
+  - set_number: SDCK-FR046
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: CT07-IT005
     set_name: Collectible Tins 2010 Wave 2
@@ -127,6 +139,10 @@ sets:
     set_name: High-Speed Riders
     rarities:
     - Rare
+  - set_number: SDCK-IT046
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: LC5D-PT073
     set_name: Legendary Collection 5D's Mega Pack
@@ -136,6 +152,10 @@ sets:
     set_name: High-Speed Riders
     rarities:
     - Rare
+  - set_number: SDCK-PT046
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: STBL-JP042
     set_name: Starstrike Blast
