--- a/data/cards/05780210.yaml
+++ b/data/cards/05780210.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
+  - set_number: SDCK-EN005
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: STBL-DE013
     set_name: Starstrike Blast
@@ -61,6 +65,10 @@ sets:
     - Rare
   - set_number: LC5D-DE065
     set_name: Legendary Collection 5D's Mega Pack
+    rarities:
+    - Common
+  - set_number: SDCK-DE005
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -72,6 +80,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
+  - set_number: SDCK-FR005
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: STBL-IT013
     set_name: Starstrike Blast
@@ -81,9 +93,17 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
+  - set_number: SDCK-IT005
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: LC5D-PT065
     set_name: Legendary Collection 5D's Mega Pack
+    rarities:
+    - Common
+  - set_number: SDCK-PT005
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
