--- a/data/cards/10723472.yaml
+++ b/data/cards/10723472.yaml
@@ -45,26 +45,46 @@ sets:
     set_name: King's Court
     rarities:
     - Ultra Rare
+  - set_number: SDCK-EN030
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: KICO-DE020
     set_name: King's Court
     rarities:
     - Ultra Rare
+  - set_number: SDCK-DE030
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: KICO-FR020
     set_name: King's Court
     rarities:
     - Ultra Rare
+  - set_number: SDCK-FR030
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: KICO-IT020
     set_name: King's Court
     rarities:
     - Ultra Rare
+  - set_number: SDCK-IT030
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: KICO-PT020
     set_name: King's Court
     rarities:
     - Ultra Rare
+  - set_number: SDCK-PT030
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: 20PP-JP012
     set_name: Premium Pack 2020
