--- a/data/cards/35058857.yaml
+++ b/data/cards/35058857.yaml
@@ -48,26 +48,46 @@ sets:
     set_name: 'Premium Gold: Infinite Gold'
     rarities:
     - Gold Secret Rare
+  - set_number: SDCK-EN015
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: PGL3-DE004
     set_name: 'Premium Gold: Infinite Gold'
     rarities:
     - Gold Secret Rare
+  - set_number: SDCK-DE015
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: PGL3-FR004
     set_name: 'Premium Gold: Infinite Gold'
     rarities:
     - Gold Secret Rare
+  - set_number: SDCK-FR015
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: PGL3-IT004
     set_name: 'Premium Gold: Infinite Gold'
     rarities:
     - Gold Secret Rare
+  - set_number: SDCK-IT015
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: PGL3-PT004
     set_name: 'Premium Gold: Infinite Gold'
     rarities:
     - Gold Secret Rare
+  - set_number: SDCK-PT015
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: PP18-JP004
     set_name: Premium Pack 18
