--- a/data/cards/62242678.yaml
+++ b/data/cards/62242678.yaml
@@ -70,6 +70,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-EN047
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Super Rare
   de:
   - set_number: SHVI-DE097
     set_name: Shining Victories
@@ -83,6 +87,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-DE047
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Super Rare
   fr:
   - set_number: SHVI-FR097
     set_name: Shining Victories
@@ -96,6 +104,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-FR047
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Super Rare
   it:
   - set_number: SHVI-IT097
     set_name: Shining Victories
@@ -109,6 +121,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-IT047
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Super Rare
   pt:
   - set_number: SHVI-PT097
     set_name: Shining Victories
@@ -122,6 +138,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: SDCK-PT047
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Super Rare
   ja:
   - set_number: VJMP-JP107
     set_name: V Jump October 2015 promotional card
