--- a/data/cards/63086455.yaml
+++ b/data/cards/63086455.yaml
@@ -48,6 +48,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: SDCK-EN040
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: POTE-DE078
     set_name: Power of the Elements
@@ -55,6 +59,10 @@ sets:
     - Common
   - set_number: MP23-DE146
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
+  - set_number: SDCK-DE040
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -66,6 +74,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: SDCK-FR040
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: POTE-IT078
     set_name: Power of the Elements
@@ -75,6 +87,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: SDCK-IT040
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: POTE-PT078
     set_name: Power of the Elements
@@ -82,6 +98,10 @@ sets:
     - Common
   - set_number: MP23-PT146
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
+  - set_number: SDCK-PT040
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
