--- a/data/cards/66141736.yaml
+++ b/data/cards/66141736.yaml
@@ -57,26 +57,46 @@ sets:
     set_name: Savage Strike
     rarities:
     - Common
+  - set_number: SDCK-EN048
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: SAST-DE099
     set_name: Savage Strike
     rarities:
     - Common
+  - set_number: SDCK-DE048
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: SAST-FR099
     set_name: Savage Strike
     rarities:
     - Common
+  - set_number: SDCK-FR048
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SAST-IT099
     set_name: Savage Strike
     rarities:
     - Common
+  - set_number: SDCK-IT048
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SAST-PT099
     set_name: Savage Strike
     rarities:
     - Common
+  - set_number: SDCK-PT048
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: VP16-JP002
     set_name: 20th Rival Collection
