--- a/data/cards/70711847.yaml
+++ b/data/cards/70711847.yaml
@@ -63,6 +63,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: SDCK-EN022
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: CYHO-DE083
     set_name: Cybernetic Horizon
@@ -81,6 +85,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: SDCK-DE022
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: CYHO-FR083
     set_name: Cybernetic Horizon
@@ -99,6 +107,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: SDCK-FR022
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: CYHO-IT083
     set_name: Cybernetic Horizon
@@ -117,6 +129,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: SDCK-IT022
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: CYHO-PT083
     set_name: Cybernetic Horizon
@@ -135,6 +151,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: SDCK-PT022
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: EP19-JP022
     set_name: Extra Pack 2019
