--- a/data/cards/77336644.yaml
+++ b/data/cards/77336644.yaml
@@ -54,6 +54,10 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Ghost Rare
+  - set_number: SDCK-EN017
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: CRMS-DE004
     set_name: Crimson Crisis
@@ -61,6 +65,10 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Ghost Rare
+  - set_number: SDCK-DE017
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: CRMS-FR004
     set_name: Crimson Crisis
@@ -68,6 +76,10 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Ghost Rare
+  - set_number: SDCK-FR017
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: CRMS-IT004
     set_name: Crimson Crisis
@@ -75,9 +87,17 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Ghost Rare
+  - set_number: SDCK-IT017
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: OP10-PT027
     set_name: OTS Tournament Pack 10
+    rarities:
+    - Common
+  - set_number: SDCK-PT017
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
