--- a/data/cards/77360173.yaml
+++ b/data/cards/77360173.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 'Duelist Pack: Dimensional Guardians'
     rarities:
     - Common
+  - set_number: SDCK-EN006
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: HSRD-DE017
     set_name: High-Speed Riders
@@ -62,6 +66,10 @@ sets:
     - Common
   - set_number: DPDG-DE021
     set_name: 'Duelist Pack: Dimensional Guardians'
+    rarities:
+    - Common
+  - set_number: SDCK-DE006
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   fr:
@@ -73,6 +81,10 @@ sets:
     set_name: 'Duelist Pack: Dimensional Guardians'
     rarities:
     - Common
+  - set_number: SDCK-FR006
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: HSRD-IT017
     set_name: High-Speed Riders
@@ -82,6 +94,10 @@ sets:
     set_name: 'Duelist Pack: Dimensional Guardians'
     rarities:
     - Common
+  - set_number: SDCK-IT006
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: HSRD-PT017
     set_name: High-Speed Riders
@@ -89,6 +105,10 @@ sets:
     - Common
   - set_number: DPDG-PT021
     set_name: 'Duelist Pack: Dimensional Guardians'
+    rarities:
+    - Common
+  - set_number: SDCK-PT006
+    set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
   ja:
