--- a/data/cards/80666118.yaml
+++ b/data/cards/80666118.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: SDCK-EN041
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   de:
   - set_number: DOCS-DE046
     set_name: Dimension of Chaos
@@ -94,6 +98,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: SDCK-DE041
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   fr:
   - set_number: DOCS-FR046
     set_name: Dimension of Chaos
@@ -113,6 +121,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: SDCK-FR041
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   it:
   - set_number: DOCS-IT046
     set_name: Dimension of Chaos
@@ -132,6 +144,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: SDCK-IT041
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   pt:
   - set_number: DOCS-PT046
     set_name: Dimension of Chaos
@@ -151,6 +167,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: SDCK-PT041
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Common
   ja:
   - set_number: DOCS-JP046
     set_name: Dimension of Chaos
