--- a/data/cards/99585850.yaml
+++ b/data/cards/99585850.yaml
@@ -64,26 +64,46 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-EN044
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Super Rare
   de:
   - set_number: GFTP-DE045
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-DE044
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Super Rare
   fr:
   - set_number: GFTP-FR045
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-FR044
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Super Rare
   it:
   - set_number: GFTP-IT045
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-IT044
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Super Rare
   pt:
   - set_number: GFTP-PT045
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: SDCK-PT044
+    set_name: 'Structure Deck: The Crimson King'
+    rarities:
+    - Super Rare
   ja:
   - set_number: LGB1-JP021
     set_name: Legendary Gold Box
