--- a/data/cards/yugipedia1012091.yaml
+++ b/data/cards/yugipedia1012091.yaml
@@ -18,7 +18,7 @@ text:
     During the Main Phase: You can activate 1 of these effects.
     ● Shuffle 1 LIGHT Warrior or Dragon Ritual Monster or 1 Ritual Spell from your hand or GY into the Deck, and if you do, take 1 "Silenforc" monster from your Deck, and either add it to your hand or Special Summon it.
     ● Target cards your opponent controls, up to the number of LIGHT Warrior and Dragon Ritual Monsters you control; destroy both them and this card.
-    You can use this effect of "Silenforcing Authority" once per turn.
+    You can only use this effect of "Silenforcing Authority" once per turn.
   de:
   es:
   fr:
