--- a/data/cards/12883044.yaml
+++ b/data/cards/12883044.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     挥舞着燃烧的绳子慢慢接近，不能和他对眼。
 card_type: Monster
-monster_type_line: Pyro
+monster_type_line: Pyro / Normal
 attribute: FIRE
 level: 2
 atk: 550
