--- a/data/cards/93346024.yaml
+++ b/data/cards/93346024.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     潜伏在洞窟的巨龙。平时很温顺、一旦生气就很恐怖。传说其在守着巨大的财富。
 card_type: Monster
-monster_type_line: Dragon
+monster_type_line: Dragon / Normal
 attribute: WIND
 level: 4
 atk: 1300
