--- a/data/cards/98456117.yaml
+++ b/data/cards/98456117.yaml
@@ -32,7 +32,7 @@ text:
   zh-CN: |-
     在海中彷徨着，发现猎物后会将其水分吸干。
 card_type: Monster
-monster_type_line: Aqua
+monster_type_line: Aqua / Normal
 attribute: WATER
 level: 3
 atk: 850
