--- a/data/cards/52121290.yaml
+++ b/data/cards/52121290.yaml
@@ -32,7 +32,7 @@ text:
   zh-CN: |-
     以为是美女而随便靠近的话，便会被吸干全身的血液。
 card_type: Monster
-monster_type_line: Rock
+monster_type_line: Rock / Normal
 attribute: EARTH
 level: 3
 atk: 400
