--- a/data/cards/58696829.yaml
+++ b/data/cards/58696829.yaml
@@ -32,7 +32,7 @@ text:
   zh-CN: |-
     最新生物工艺产生的僧侣，掌握着无数的秘密。
 card_type: Monster
-monster_type_line: Fairy
+monster_type_line: Fairy / Normal
 attribute: LIGHT
 level: 3
 atk: 1150
