--- a/data/cards/67371383.yaml
+++ b/data/cards/67371383.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     在陆地像兽一样，在海里像鱼一样都能快速攻击。
 card_type: Monster
-monster_type_line: Fish
+monster_type_line: Fish / Normal
 attribute: WATER
 level: 6
 atk: 2400
