--- a/data/cards/yugipedia1012079.yaml
+++ b/data/cards/yugipedia1012079.yaml
@@ -48,6 +48,11 @@ sets:
     - Ultimate Rare
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: PHNI-JP037
+    set_name: Phantom Nightmare +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
