--- a/data/cards/12143771.yaml
+++ b/data/cards/12143771.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     一直在忍受着饥饿的痛苦，发誓一定要发起革命的人民。
 card_type: Monster
-monster_type_line: Pyro
+monster_type_line: Pyro / Normal
 attribute: FIRE
 level: 2
 atk: 600
