--- a/data/cards/24530661.yaml
+++ b/data/cards/24530661.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     一直在寻找强大对方的僵尸。传说是一个武术高手。
 card_type: Monster
-monster_type_line: Zombie
+monster_type_line: Zombie / Normal
 attribute: EARTH
 level: 4
 atk: 1750
