--- a/data/cards/26566878.yaml
+++ b/data/cards/26566878.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     寄宿着恶魔灵魂的巨大蝎子。平时蕴存着力量，但是潜在的能力很高。
 card_type: Monster
-monster_type_line: Insect
+monster_type_line: Insect / Normal
 attribute: EARTH
 level: 2
 atk: 900
