--- a/data/cards/38916461.yaml
+++ b/data/cards/38916461.yaml
@@ -32,7 +32,7 @@ text:
   zh-CN: |-
     全身覆盖着金属装甲的战士。与「稀有金属女郎」融合将提升力量。
 card_type: Monster
-monster_type_line: Machine
+monster_type_line: Machine / Normal
 attribute: EARTH
 level: 3
 atk: 900
