--- a/data/cards/39674352.yaml
+++ b/data/cards/39674352.yaml
@@ -35,7 +35,7 @@ text:
   zh-CN: |-
     已经精神崩溃，肉体追求更强的力量而暴走。在它身上再也找不到昔日的面影……
 card_type: Monster
-monster_type_line: Reptile
+monster_type_line: Reptile / Normal
 attribute: WATER
 level: 8
 atk: 2950
