--- a/data/cards/44203504.yaml
+++ b/data/cards/44203504.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     侍从机械王的机械族的司令官。统率机械部队的攻击性用兵而很有名。
 card_type: Monster
-monster_type_line: Machine
+monster_type_line: Machine / Normal
 attribute: FIRE
 level: 4
 atk: 1600
