--- a/data/cards/48202661.yaml
+++ b/data/cards/48202661.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     虽然样子不可靠，其实隐藏着惊人的潜在能力。
 card_type: Monster
-monster_type_line: Fairy
+monster_type_line: Fairy / Normal
 attribute: FIRE
 level: 5
 atk: 100
