--- a/data/cards/53776525.yaml
+++ b/data/cards/53776525.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     现在虽然还拥有温和的心，但却背负着被邪恶之心侵蚀的命运。
 card_type: Monster
-monster_type_line: Reptile
+monster_type_line: Reptile / Normal
 attribute: WATER
 level: 1
 atk: 350
