--- a/data/cards/58538870.yaml
+++ b/data/cards/58538870.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     坚信着一定会在某一天重新获得自由而暂时忍受着每日痛苦生活的民众。
 card_type: Monster
-monster_type_line: Aqua
+monster_type_line: Aqua / Normal
 attribute: WATER
 level: 1
 atk: 400
