--- a/data/cards/85936485.yaml
+++ b/data/cards/85936485.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     立誓要为了对抗强大力量而集结的人们。革命之日将近。
 card_type: Monster
-monster_type_line: Thunder
+monster_type_line: Thunder / Normal
 attribute: WIND
 level: 3
 atk: 1000
