--- a/data/cards/04035199.yaml
+++ b/data/cards/04035199.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     具有令人惊讶的力量的蝶形领带，能够套上敌人的身体，对它进行袭击。
 card_type: Monster
-monster_type_line: Machine
+monster_type_line: Machine / Normal
 attribute: DARK
 level: 5
 atk: 1200
