--- a/data/cards/66073051.yaml
+++ b/data/cards/66073051.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     为可以获得大天使力量而寻求圣域所在的战士。为了逃避凶恶魔族的诱惑，而一直孤独的战斗着。
 card_type: Monster
-monster_type_line: Warrior
+monster_type_line: Warrior / Normal
 attribute: EARTH
 level: 4
 atk: 1600
