--- a/data/cards/05780210.yaml
+++ b/data/cards/05780210.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：自分フィールドにレベル８以上のＳモンスターが存在する場合、このカードは手札から特殊召喚できる。
   ko: |-
-    자신 필드 위에 레벨 8 이상의 싱크로 몬스터가 앞면 표시로 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다.
+    ①: 자신 필드에 레벨 8 이상의 싱크로 몬스터가 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
     ①：自己场上有等级8以上的同步怪兽存在的情况下，此卡可从手牌中特殊召唤。
