--- a/data/cards/54343893.yaml
+++ b/data/cards/54343893.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：相手フィールドにのみモンスターが存在する場合、このカードは手札から特殊召喚できる。この方法で特殊召喚したこのカードの元々の攻撃力・守備力は半分になる。
   ko: |-
-    ①: 상대 필드에 몬스터가 존재하고, 자신 필드에 몬스터가 존재하지 않을 경우, 이 카드는 패에서 특수 소환할 수 있다. 이 방법으로 특수 소환한 이 카드의 원래 공격력 / 수비력은 절반이 된다.
+    ①: 상대 필드에만 몬스터가 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다. 이 방법으로 특수 소환한 이 카드의 원래의 공격력 / 수비력은 절반이 된다.
   zh-TW: |-
     对手场上存在怪兽，我方场上不存在怪兽的场合，此卡可从手牌特殊召唤。此方法特殊召唤的此卡的原本攻击力、守备力各变为一半。
   zh-CN: |-
