--- a/data/cards/03431737.yaml
+++ b/data/cards/03431737.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードを手札から墓地へ捨てて発動できる。デッキから「バスター・モード」１枚を手札に加える。
   ko: |-
-    이 카드를 패에서 묘지에 버리고 발동한다. 자신의 덱에서 "버스터 모드" 1장을 패에 넣는다.
+    ①: 이 카드를 패에서 묘지로 버리고 발동할 수 있다. 덱에서 "버스터 모드" 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
     ①：将此卡从手牌舍弃至墓地可以发动。从牌组将1张“爆裂模式”加入手牌。
