--- a/data/cards/09753964.yaml
+++ b/data/cards/09753964.yaml
@@ -37,7 +37,7 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手ターンに、相手フィールドの表側表示カード１枚を対象として発動できる。そのカードの効果をターン終了時まで無効にする。②：このカードが相手に戦闘ダメージを与えた時、自分の墓地のチューナー１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
   ko: |-
     튜너 ＋ 튜너 이외의 드래곤족 / 어둠 속성 싱크로 몬스터 1장
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 상대 필드의 앞면 표시의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드의 효과를 턴 종료시까지 무효로 한다. 이 효과는 상대 턴에도 발동할 수 있다. ②: 이 카드가 상대에게 전투 데미지를 주었을 때, 자신 묘지의 튜너 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대 턴에, 상대 필드의 앞면 표시 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드의 효과를 턴 종료시까지 무효로 한다. ②: 이 카드가 상대에게 전투 데미지를 주었을 때, 자신 묘지의 튜너 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
     协调＋协调以外的龙族・暗属性同步怪兽1只
