--- a/data/cards/10723472.yaml
+++ b/data/cards/10723472.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドにレベル８以上のＳモンスターが存在する場合に発動できる。「バーニング・ソウル」以外の自分の墓地のカード１枚を手札に加える。その後、Ｓモンスター１体のＳ召喚を行う。このカードの発動後、ターン終了時まで相手はフィールドのＳモンスターを効果の対象にできない。
   ko: |-
-    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에 레벨 8 이상의 싱크로 몬스터가 존재할 경우에 발동할 수 있다. "버닝 소울" 이외의 자신 묘지의 카드 1장을 골라 패에 넣고, 자신은 자신 필드의 몬스터를 싱크로 소재로서 싱크로 소환한다. 이 카드의 발동 후, 턴 종료시까지 상대는 필드의 싱크로 몬스터를 효과의 대상으로 할 수 없다.
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에 레벨 8 이상의 싱크로 몬스터가 존재할 경우에 발동할 수 있다. "버닝 소울" 이외의 자신 묘지의 카드 1장을 패에 넣는다. 그 후, 싱크로 몬스터 1장의 싱크로 소환을 실행한다. 이 카드의 발동 후, 턴 종료시까지 상대는 필드의 싱크로 몬스터를 효과의 대상으로 할 수 없다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡在1回合只能发动1张。
