--- a/data/cards/14886469.yaml
+++ b/data/cards/14886469.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名の効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した時、自分フィールドに他のモンスターが存在しなければ発動できる。自分の手札・墓地からレベル３以下の悪魔族チューナー１体を特殊召喚する。
   ko: |-
-    "레드 스프린터"의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 때, 자신 필드에 다른 몬스터가 존재하지 않을 경우에 발동할 수 있다. 자신의 패 / 묘지에서 레벨 3 이하의 악마족 튜너 1장을 고르고 특수 소환한다.
+    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 일반 소환 / 특수 소환했을 때, 자신 필드에 다른 몬스터가 존재하지 않으면 발동할 수 있다. 자신의 패 / 묘지에서 레벨 3 이하의 악마족 튜너 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
     此卡名的效果1回合仅可使用1次。①：此卡召唤・特殊召唤成功时，自己场上没有其他怪兽存在的情况下可以发动。从自己的手牌・墓地挑选1只等级3以下的恶魔族协调特殊召唤。
