--- a/data/cards/15576074.yaml
+++ b/data/cards/15576074.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：自分の墓地の「リゾネーター」モンスター２体を対象として発動できる。デッキからレベル４モンスター１体を手札に加え、対象のモンスターをデッキに戻す。
   ko: |-
-    자신의 묘지에 존재하는 "레조네이터"라는 이름이 붙은 몬스터 2장을 선택하고 발동한다. 자신의 덱에서 레벨 4 몬스터 1장을 패에 넣고, 선택한 묘지의 몬스터를 덱으로 되돌린다.
+    ①: 자신 묘지의 "레조네이터" 몬스터 2장을 대상으로 하고 발동할 수 있다. 덱에서 레벨 4 몬스터 1장을 패에 넣고, 대상 몬스터를 덱으로 되돌린다.
   zh-TW:
   zh-CN: |-
     选择自己墓地存在的2只名字带有「共鸣者」的怪兽发动。从自己卡组把1只4星怪兽加入手卡，选择的墓地的怪兽回到卡组。
