--- a/data/cards/19665973.yaml
+++ b/data/cards/19665973.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：相手モンスターの直接攻撃宣言時に発動できる。このカードを手札から特殊召喚する。その後、バトルフェイズを終了する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。
   ko: |-
-    ①: 상대 몬스터의 직접 공격 선언시에 발동할 수 있다. 이 카드를 패에서 특수 소환하고, 그 후 배틀 페이즈를 종료한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
+    ①: 상대 몬스터의 직접 공격 선언시에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. 그 후, 배틀 페이즈를 종료한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW: |-
     对手怪兽直接攻击宣言时可发动。从手牌特殊召唤此卡，之后结束战斗阶段。此效果特殊召唤的此卡，从场上离开的场合从游戏中除外。
   zh-CN: |-
