--- a/data/cards/36857073.yaml
+++ b/data/cards/36857073.yaml
@@ -37,7 +37,7 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドのモンスター１体をリリースし、自分の墓地の「レッド・デーモン」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。②：このカードが相手に戦闘ダメージを与えた時に発動できる。自分のデッキ及び墓地から１体ずつ、レベルが同じチューナーを守備表示で特殊召喚する。
   ko: |-
     튜너 ＋ 튜너 이외의 드래곤족 / 어둠 속성 싱크로 몬스터 1장
-    "염마룡 레드 데몬 베리얼"의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 몬스터 1장을 릴리스하고, 자신 묘지의 "레드 데몬" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 특수 소환한다. ②: 이 카드가 상대에게 전투 데미지를 주었을 때에 발동할 수 있다. 자신의 덱 및 묘지에서 레벨이 같은 튜너를 각각 1장씩 고르고 수비 표시로 특수 소환한다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 몬스터 1장을 릴리스하고, 자신 묘지의 "레드 데몬" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 특수 소환한다. ②: 이 카드가 상대에게 전투 데미지를 주었을 때에 발동할 수 있다. 자신의 덱 및 묘지에서 1장씩, 레벨이 같은 튜너를 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
     调整+调整以外的龙族·暗属性同调怪兽1只。「琰魔龙 红莲魔·葬」的①②的效果1回合各能使用1次。①：把自己场上1只怪兽解放，以自己墓地1只「红莲魔」怪兽为对象才能发动。那只怪兽特殊召唤。②：这张卡给与对方战斗伤害时才能发动。从自己的卡组以及墓地选等级相同的调整各1只守备表示特殊召唤。
