--- a/data/cards/45313993.yaml
+++ b/data/cards/45313993.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：自分が「リゾネーター」モンスターを召喚した時に発動できる。このカードを手札から特殊召喚する。この効果で特殊召喚したこのカードの攻撃力は半分になる。
   ko: |-
-    ①: 자신이 "레조네이터" 몬스터의 일반 소환에 성공했을 때에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. 이 효과로 특수 소환한 이 카드의 공격력은 절반이 된다.
+    ①: 자신이 "레조네이터" 몬스터를 일반 소환했을 때에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. 이 효과로 특수 소환한 이 카드의 공격력은 절반이 된다.
   zh-TW:
   zh-CN: |-
     ①：自己对「共鸣者」怪兽的召唤成功时才能发动。这张卡从手卡特殊召唤。这个效果特殊召唤的这张卡的攻击力变成一半。
