--- a/data/cards/50056656.yaml
+++ b/data/cards/50056656.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: スカーレッド・ゾーン
   ja_romaji: Sukāreddo Zōn
-  ko:
+  ko: 스카레드 존
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「レッド・デーモンズ・ドラゴン」またはそのカード名が記されたＳモンスターが存在し、相手がカードの効果を発動した時、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。②：自分の除外状態のドラゴン族・闇属性Ｓモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "레드 데몬즈 드래곤" 또는 그 카드명이 쓰여진 싱크로 몬스터가 존재하고, 상대가 카드의 효과를 발동했을 때, 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 파괴한다. ②: 자신의 제외 상태인 드래곤족 / 어둠 속성 싱크로 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Trap
