--- a/data/cards/50078509.yaml
+++ b/data/cards/50078509.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     フィールドの効果モンスター１体を対象としてこのカードを発動できる。①：このカードが魔法＆罠ゾーンに存在する限り、対象の表側表示モンスターは攻撃できず、効果は無効化される。対象のモンスターが破壊された時にこのカードは破壊される。
   ko: |-
-    필드의 효과 몬스터 1장을 대상으로 하고 이 카드를 발동할 수 있다. ①: 이 카드가 마법 & 함정 존에 존재하는 한, 그 앞면 표시 몬스터는 공격할 수 없으며 효과는 무효화된다. 그 몬스터가 파괴되었을 때에 이 카드는 파괴된다.
+    필드의 효과 몬스터 1장을 대상으로 하고 이 카드를 발동할 수 있다. ①: 이 카드가 마법 & 함정 존에 존재하는 한, 대상의 앞면 표시 몬스터는 공격할 수 없으며, 효과는 무효화된다. 대상 몬스터가 파괴되었을 때에 이 카드는 파괴된다.
   zh-TW: |-
     可以选择场上的1只效果怪兽进行发动。选择的怪兽不可进行攻击，效果被无效化。当选择的怪兽被破坏时，破坏此卡。
   zh-CN: |-
