--- a/data/cards/62242678.yaml
+++ b/data/cards/62242678.yaml
@@ -37,7 +37,7 @@ text:
     ①：このカードがＳ召喚した時に発動できる（この効果の発動に対して、相手はカードの効果を発動できない）。このターン、相手はフィールドで発動する効果を発動できない。②：このカードが戦闘でモンスターを破壊した場合に発動する。そのモンスターの元々の攻撃力分のダメージを相手に与える。③：このカードが相手によって破壊された場合、自分の墓地のレベル８以下のドラゴン族・闇属性Ｓモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
     튜너 2장 ＋ 튜너 이외의 드래곤족 / 어둠 속성 싱크로 몬스터 1장
-    ①: 이 카드가 싱크로 소환에 성공했을 때에 발동할 수 있다. 이 턴에 상대는 필드에서 발동하는 효과를 발동할 수 없다. 이 발동에 대하여, 상대는 카드의 효과를 발동할 수 없다. ②: 이 카드가 전투로 몬스터를 파괴했을 경우에 발동한다. 그 몬스터의 원래 공격력만큼의 데미지를 상대에게 준다. ③: 이 카드가 상대에 의해 파괴되었을 경우, 자신 묘지의 레벨 8 이하의 드래곤족 / 어둠 속성 싱크로 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
+    ①: 이 카드를 싱크로 소환했을 때에 발동할 수 있다(이 효과의 발동에 대하여, 상대는 카드의 효과를 발동할 수 없다). 이 턴에, 상대는 필드에서 발동하는 효과를 발동할 수 없다. ②: 이 카드가 전투로 몬스터를 파괴했을 경우에 발동한다. 그 몬스터의 원래 공격력만큼의 데미지를 상대에게 준다. ③: 이 카드가 상대에 의해 파괴되었을 경우, 자신 묘지의 레벨 8 이하의 드래곤족 / 어둠 속성 싱크로 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
     调整2只＋调整以外的龙族·暗属性同调怪兽1只
