--- a/data/cards/62991792.yaml
+++ b/data/cards/62991792.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: ソウル・リゾネーター
   ja_romaji: Sōru Rizonētā
-  ko:
+  ko: 소울 레조네이터
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：このカードが召喚・特殊召喚した場合に発動できる。「ソウル・リゾネーター」を除く、レベル４以下の悪魔族モンスター１体をデッキから手札に加える。この効果の発動後、ターン終了時まで自分は闇属性ＳモンスターしかＥＸデッキから特殊召喚できない。②：自分フィールドに「レッド・デーモンズ・ドラゴン」またはそのカード名が記されたＳモンスターが存在し、自分フィールドのカードが効果で破壊される場合、代わりに墓地のこのカードを除外できる。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 일반 소환 / 특수 소환했을 경우에 발동할 수 있다. "소울 레조네이터"가 아닌, 레벨 4 이하의 악마족 몬스터 1장을 덱에서 패에 넣는다. 이 효과의 발동 후, 턴 종료시까지 자신은 어둠 속성 싱크로 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다. ②: 자신 필드에 "레드 데몬즈 드래곤" 또는 그 카드명이 쓰여진 싱크로 몬스터가 존재하고, 자신 필드의 카드가 효과로 파괴될 경우, 대신에 묘지의 이 카드를 제외할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
