--- a/data/cards/66141736.yaml
+++ b/data/cards/66141736.yaml
@@ -37,7 +37,7 @@ text:
     ①：このカードがＳ召喚した時、自分の墓地の「リゾネーター」モンスター１体を対象として発動できる（この効果を発動するターン、自分はドラゴン族・闇属性ＳモンスターしかＥＸデッキから特殊召喚できない）。そのモンスターを特殊召喚する。②：このターンに墓地へ送られていないこのカードを墓地から除外し、自分の墓地のレベル１の「リゾネーター」モンスター２体を対象として発動できる。そのモンスター２体を特殊召喚する。
   ko: |-
     악마족 튜너 ＋ 튜너 이외의 몬스터 1장 이상
-    ①: 이 카드가 싱크로 소환에 성공했을 때, 자신 묘지의 "레조네이터" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 효과를 발동하는 턴에, 자신은 드래곤족 / 어둠 속성 싱크로 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 레벨 1 의 "레조네이터" 몬스터 2장을 대상으로 하여 발동할 수 있다. 그 몬스터 2장을 특수 소환한다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
+    ①: 이 카드를 싱크로 소환했을 때, 자신 묘지의 "레조네이터" 몬스터 1장을 대상으로 하고 발동할 수 있다(이 효과를 발동하는 턴에, 자신은 드래곤족 / 어둠 속성 싱크로 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다). 그 몬스터를 특수 소환한다. ②: 이 턴에 묘지로 보내져 있지 않은 이 카드를 묘지에서 제외하고, 자신 묘지의 레벨 1 의 "레조네이터" 몬스터 2장을 대상으로 하여 발동할 수 있다. 그 몬스터 2장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
     恶魔族协调+1只以上协调以外的怪兽
