--- a/data/cards/70902743.yaml
+++ b/data/cards/70902743.yaml
@@ -37,7 +37,7 @@ text:
     ①：このカードが相手の守備表示モンスターに攻撃を行ったダメージ計算後に発動する。相手フィールドの守備表示モンスターを全て破壊する。②：自分エンドフェイズに発動する。このカードがフィールドに表側表示で存在する場合、このターン攻撃宣言をしていない自分フィールドの他のモンスターを全て破壊する。
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
-    ①: 이 카드가 상대의 수비 표시 몬스터를 공격한 데미지 계산 후에 발동한다. 상대 필드의 수비 표시 몬스터를 전부 파괴한다. ②: 자신 엔드 페이즈에 발동한다. 이 카드가 필드에 앞면 표시로 존재할 경우, 이 카드 이외의 이 턴에 공격 선언을 하고 있지 않은 자신 필드의 몬스터를 전부 파괴한다.
+    ①: 이 카드가 상대의 수비 표시 몬스터에 공격을 실행한 데미지 계산 후에 발동한다. 상대 필드의 수비 표시 몬스터를 전부 파괴한다. ②: 자신 엔드 페이즈에 발동한다. 이 카드가 필드에 앞면 표시로 존재할 경우, 이 턴에 공격 선언을 하고 있지 않은 자신 필드의 다른 몬스터를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
     协调+1只以上协调以外的怪兽
