--- a/data/cards/71821687.yaml
+++ b/data/cards/71821687.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名の効果は１ターンに１度しか使用できず、この効果を発動するターン、自分はＳモンスターしかＥＸデッキから特殊召喚できない。①：このカード以外の手札を１枚捨てて発動できる。このカードを手札から守備表示で特殊召喚する。その後、手札・デッキから「赤蟻アスカトル」１体を特殊召喚できる。
   ko: |-
-    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드 이외의 패를 1장 버리고 발동할 수 있다. 이 카드를 패에서 수비 표시로 특수 소환한다. 그 후, 패 / 덱에서 "붉은 개미 아스카톨" 1장을 특수 소환할 수 있다. 이 효과를 발동하는 턴에, 자신은 싱크로 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
+    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없으며, 이 효과를 발동하는 턴에, 자신은 싱크로 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다. ①: 이 카드 이외의 패를 1장 버리고 발동할 수 있다. 이 카드를 패에서 수비 표시로 특수 소환한다. 그 후, 패 / 덱에서 "붉은 개미 아스카톨" 1장을 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
     这个卡名的效果1回合只能使用1次。
