--- a/data/cards/74644400.yaml
+++ b/data/cards/74644400.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。「サイキック・リフレクター」を除く、「バスター・モード」またはそのカード名が記されたカード１枚をデッキから手札に加える。②：手札の「バスター・モード」１枚を相手に見せ、「サイキック・リフレクター」以外の「バスター・モード」のカード名が記された自分の墓地のモンスター１体を対象として発動できる。そのモンスターを特殊召喚し、そのレベルを４つまで上げる。
   ko: |-
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. "사이킥 리플렉터" 이외의 "버스터 모드"의 카드명이 쓰여진 카드 또는 "버스터 모드" 1장을 덱에서 패에 넣는다. ②: 패의 "버스터 모드" 1장을 상대에게 보여주고, "사이킥 리플렉터" 이외의 "버스터 모드"의 카드명이 쓰여진 자신 묘지의 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 특수 소환하고, 그 레벨을 4개까지 올린다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 일반 소환 / 특수 소환했을 경우에 발동할 수 있다. "사이킥 리플렉터"가 아닌, "버스터 모드" 또는 그 카드명이 쓰여진 카드 1장을 덱에서 패에 넣는다. ②: 패의 "버스터 모드" 1장을 상대에게 보여주고, "사이킥 리플렉터" 이외의 "버스터 모드"의 카드명이 쓰여진 자신 묘지의 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 특수 소환하고, 그 레벨을 4개까지 올린다.
   zh-TW:
   zh-CN: |-
     此卡名的①②效果1回合仅可各使用1次。①：此卡召唤・特殊召唤成功的情况下可以发动。将1张“念动力反射者”以外的、记载有“爆裂模式”卡名的卡或“爆裂模式”从牌组加入手牌。②：将手牌的1张“爆裂模式”出示给对手，以“念动力反射者”以外的1只记载有“爆裂模式”卡名的、自己墓地的怪兽为对象可以发动。将该怪兽特殊召唤，其等级上升最多4。
