--- a/data/cards/77336644.yaml
+++ b/data/cards/77336644.yaml
@@ -9,7 +9,7 @@ name:
   pt: Dragão Vermelho Arquidemônio/Modo de Ataque
   ja: レッド・デーモンズ・ドラゴン<ruby>／<rt>スラッシュ</rt></ruby>バスター
   ja_romaji: Reddo Dēmonzu Doragon Surasshu Basutā
-  ko: 레드 데몬즈 드래곤/버스터
+  ko: 레드 데몬즈 드래곤 / 버스터
   ko_rr:
   zh-TW:
   zh-CN: 暗红恶魔龙／爆裂
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードは通常召喚できず、「バスター・モード」の効果でのみ特殊召喚できる。①：このカードが攻撃したダメージ計算後に発動する。フィールドの他のモンスターを全て破壊する。②：フィールドのこのカードが破壊された時、自分の墓地の「レッド・デーモンズ・ドラゴン」１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
-    이 카드는 일반 소환/세트할 수 없다. "버스터 모드"의 효과로만 특수 소환할 수 있다. 이 카드가 공격했을 경우, 데미지 계산 후에 이 카드 이외의 몬스터를 전부 파괴한다. 또한, 필드 위에 존재하는 이 카드가 파괴되었을 때, 자신의 묘지에 존재하는 "레드 데몬즈 드래곤" 1장을 특수 소환할 수 있다.
+    이 카드는 통상 소환할 수 없으며, "버스터 모드"의 효과로만 특수 소환할 수 있다. ①: 이 카드가 공격한 데미지 계산 후에 발동한다. 필드의 다른 몬스터를 전부 파괴한다. ②: 필드의 이 카드가 파괴되었을 때, 자신 묘지의 "레드 데몬즈 드래곤" 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
     此卡不可通常召唤。仅可用“爆裂模式”的效果特殊召唤。①：在此卡攻击的伤害计算后发动。将场上此卡以外的怪兽全部破坏。②：场上的此卡被破坏时，以自己墓地的1只“暗红恶魔龙”为对象可以发动。将该怪兽特殊召唤。
