--- a/data/cards/84298614.yaml
+++ b/data/cards/84298614.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：自分の墓地のレベル４以下のモンスター１体を対象としてこのカードを発動できる。そのモンスターを特殊召喚する。このカードが魔法＆罠ゾーンに存在する限り、そのモンスターのレベルは１つ上がり、攻撃力・守備力は１００アップする。そのモンスターが破壊された時にこのカードは破壊される。
   ko: |-
-    ①: 자신 묘지의 레벨 4 이하의 몬스터 1장을 대상으로 하고 이 카드를 발동할 수 있다. 그 몬스터를 특수 소환한다. 그 몬스터는 레벨이 1개 올라가고, 공격력 / 수비력을 100 올린다. 그 몬스터가 파괴되었을 때에 이 카드는 파괴된다.
+    ①: 자신 묘지의 레벨 4 이하의 몬스터 1장을 대상으로 하고 이 카드를 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 카드가 마법 & 함정 존에 존재하는 한, 그 몬스터의 레벨은 1개 올라가고, 공격력 / 수비력은 100 올린다. 그 몬스터가 파괴되었을 때에 이 카드는 파괴된다.
   zh-TW: |-
     从我方墓地选择等级4以下的1只怪兽进行特殊召唤。受此效果特殊召唤的怪兽将提升1等级，提升攻击力、守备力100点。当该怪兽遭破坏时，破坏此卡。
   zh-CN: |-
