--- a/data/cards/87451661.yaml
+++ b/data/cards/87451661.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: スカーレッド・デーモン
   ja_romaji: Sukāreddo Dēmon
-  ko:
+  ko: 스카레드 데몬
   ko_rr:
   zh-TW:
   zh-CN:
@@ -25,7 +25,9 @@ text:
   ja: |-
     チューナー＋チューナー以外の闇属性モンスター１体以上
     このカード名の②の効果は１ターンに１度しか使用できない。①：このカードのカード名は、フィールド・墓地に存在する限り「レッド・デーモンズ・ドラゴン」として扱う。②：このカードがモンスターゾーンから墓地へ送られた場合に発動できる。ＥＸデッキから「レッド・デーモンズ・ドラゴン」１体をＳ召喚扱いで特殊召喚する。このカードがドラゴン族・闇属性ＳモンスターのＳ素材として墓地へ送られていた場合、さらに相手フィールドの攻撃表示モンスターを全て破壊できる。
-  ko:
+  ko: |-
+    튜너 ＋ 튜너 이외의 어둠 속성 몬스터 1장 이상
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "레드 데몬즈 드래곤"으로 취급한다. ②: 이 카드가 몬스터 존에서 묘지로 보내졌을 경우에 발동할 수 있다. 엑스트라 덱에서 "레드 데몬즈 드래곤" 1장을 싱크로 소환으로 취급하고 특수 소환한다. 이 카드가 드래곤족 / 어둠 속성 싱크로 몬스터의 싱크로 소재로서 묘지로 보내져 있었을 경우, 추가로 상대 필드의 공격 표시 몬스터를 전부 파괴할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
