--- a/data/cards/97489701.yaml
+++ b/data/cards/97489701.yaml
@@ -37,7 +37,7 @@ text:
     ①：このカードの攻撃力は自分の墓地のチューナーの数×５００アップする。②：フィールドのこのカードは相手の効果では破壊されない。③：相手モンスターの攻撃宣言時、その攻撃モンスター１体を対象として発動できる。フィールドのこのカードを除外し、その攻撃を無効にする。④：このカードの③の効果で除外されたターンのエンドフェイズに発動する。除外状態のこのカードを特殊召喚する。
   ko: |-
     튜너 2장 ＋ "레드 데몬즈 드래곤"
-    ①: 이 카드의 공격력은 자신 묘지의 튜너의 수 × 500 올린다. ②: 필드의 이 카드는 상대 효과로는 파괴되지 않는다. ③: 상대 몬스터의 공격 선언시에 그 공격 몬스터 1장을 대상으로 하고 발동할 수 있다. 필드의 이 카드를 제외하고, 그 공격을 무효로 한다. ④: 이 카드의 ③의 효과로 제외된 턴의 엔드 페이즈에 발동한다. 제외되어 있는 이 카드를 특수 소환한다.
+    ①: 이 카드의 공격력은 자신 묘지의 튜너의 수 × 500 올린다. ②: 필드의 이 카드는 상대 효과로는 파괴되지 않는다. ③: 상대 몬스터의 공격 선언시, 그 공격 몬스터 1장을 대상으로 하고 발동할 수 있다. 필드의 이 카드를 제외하고, 그 공격을 무효로 한다. ④: 이 카드의 ③의 효과로 제외된 턴의 엔드 페이즈에 발동한다. 제외 상태인 이 카드를 특수 소환한다.
   zh-TW:
   zh-CN: |-
     2只协调＋“暗红恶魔龙”
