--- a/data/cards/98396890.yaml
+++ b/data/cards/98396890.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: ヴィジョン・リゾネーター
   ja_romaji: Vijon Rizonētā
-  ko:
+  ko: 비전 레조네이터
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：フィールドにレベル５以上の闇属性モンスターが存在する場合、このカードは手札から特殊召喚できる。②：このカードが墓地へ送られた場合に発動できる。デッキから「レッド・デーモンズ・ドラゴン」のカード名が記された魔法・罠カード１枚を手札に加える。
-  ko:
+  ko: |-
+    이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 필드에 레벨 5 이상의 어둠 속성 몬스터가 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다. ②: 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 "레드 데몬즈 드래곤"의 카드명이 쓰여진 마법 / 함정 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN:
 card_type: Monster
