--- a/data/cards/99585850.yaml
+++ b/data/cards/99585850.yaml
@@ -37,7 +37,7 @@ text:
     このカードはＳ召喚でのみＥＸデッキから特殊召喚できる。①：このカードの攻撃力は自分の墓地のチューナーの数×５００アップする。②：フィールドのこのカードは相手の効果では破壊されない。③：１ターンに１度、相手モンスターの効果が発動した時、または相手モンスターの攻撃宣言時に発動できる。このカード及び相手フィールドのカードを全て除外する。④：このカードの③の効果で除外された場合、次の自分エンドフェイズに発動する。除外状態のこのカードを特殊召喚する。
   ko: |-
     튜너 3장 ＋ 튜너 이외의 싱크로 몬스터 1장 이상
-    이 카드는 싱크로 소환으로만 엑스트라 덱에서 특수 소환할 수 있다. ①: 이 카드의 공격력은 자신 묘지의 튜너의 수 × 500 올린다. ②: 필드의 이 카드는 상대 효과로는 파괴되지 않는다. ③: 1턴에 1번, 상대 몬스터의 효과가 발동했을 때, 또는 상대 몬스터의 공격 선언시에 발동할 수 있다. 이 카드 및 상대 필드의 카드를 전부 제외한다. ④: 이 카드의 ③의 효과로 제외되었을 경우, 다음 자신 엔드 페이즈에 발동한다. 제외되어 있는 이 카드를 특수 소환한다.
+    이 카드는 싱크로 소환으로만 엑스트라 덱에서 특수 소환할 수 있다. ①: 이 카드의 공격력은 자신 묘지의 튜너의 수 × 500 올린다. ②: 필드의 이 카드는 상대 효과로는 파괴되지 않는다. ③: 1턴에 1번, 상대 몬스터의 효과가 발동했을 때, 또는 상대 몬스터의 공격 선언시에 발동할 수 있다. 이 카드 및 상대 필드의 카드를 전부 제외한다. ④: 이 카드의 ③의 효과로 제외되었을 경우, 다음 자신 엔드 페이즈에 발동한다. 제외 상태인 이 카드를 특수 소환한다.
   zh-TW:
   zh-CN: |-
     调整3只＋调整以外的同调怪兽1只以上
