--- a/data/cards/05614808.yaml
+++ b/data/cards/05614808.yaml
@@ -51,6 +51,7 @@ def: 2000
 materials: 1 WATER Tuner + 1+ non-Tuner WATER monsters
 series:
 - White
+- White Aura
 images:
 - index: 1
   image: WhiteAuraWhale-BLLR-EN-ScR-1E.png
