--- a/data/cards/63731062.yaml
+++ b/data/cards/63731062.yaml
@@ -53,6 +53,7 @@ def: 1500
 materials: 1 WATER Tuner + 1 or more non-Tuner monsters
 series:
 - White
+- White Aura
 images:
 - index: 1
   image: WhiteAuraMonoceros-MP20-EN-R-1E.png
