--- a/data/rush/yugipedia1008803.yaml
+++ b/data/rush/yugipedia1008803.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    Send 1 monster with 0 ATK from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    TBA
+    Draw 1 card. Then, if you have "Straynge Cat" in your Graveyard, you can choose 1 face-up monster with 0 ATK on your field. If you do, that monster cannot be destroyed by card effects this turn.
   de:
   es:
   fr:
