--- a/rush.yaml
+++ b/rush.yaml
@@ -116115,7 +116115,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    Send 1 monster with 0 ATK from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -116127,7 +116127,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    TBA
+    Draw 1 card. Then, if you have "Straynge Cat" in your Graveyard, you can choose 1 face-up monster with 0 ATK on your field. If you do, that monster cannot be destroyed by card effects this turn.
   de:
   es:
   fr:
@@ -116698,6 +116698,66 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1011943
+---
+konami_id:
+name:
+  en: Phoenix Dragoon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: フェニックス・ドラグーン
+  ja_romaji: Fenikkusu Doragūn
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have 10 or more cards in your Deck, send 1 monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Gain 300 LP. Then, if you have a Level 8 monster in your Graveyard, draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: FIRE
+level: 4
+atk: 1000
+def: 1000
+images:
+- index: 1
+  image: PhoenixDragoon-RDSD0A-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0A-JP008
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1012303
 ---
 konami_id:
 name:
