--- a/data/cards/yugipedia1012287.yaml
+++ b/data/cards/yugipedia1012287.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When this card is activated: You can add 1 Fish monster that has an effect to treat itself as a Tuner, from your Deck to your hand. Once per turn, if your "White Aura" monster attacked, at the end of a Damage Step: You can activate this effect; the attacking monster can make a second attack in a row. Once per turn, if a Level 8 or higher Fish Synchro Monster(s) is Special Summoned from your GY (even during the Damage Step): You can destroy all monsters your opponent controls. You can only activate 1 "White Reincarnation" per turn.
+    When this card is activated: Add 1 Fish monster that has an effect to treat itself as a Tuner, from your Deck to your hand. Once per turn, if your "White Aura" monster attacked, at the end of the Damage Step: You can activate this effect; the attacking monster can make a second attack in a row. Once per turn, if a Level 8 or higher Fish Synchro Monster(s) is Special Summoned from your GY (even during the Damage Step): You can destroy all monsters your opponent controls. You can only activate 1 "White Reincarnation" per turn.
   de:
   es:
   fr:
