--- a/data/cards/02405631.yaml
+++ b/data/cards/02405631.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Secret Rare
+  ja:
+  - set_number: WPP4-JP023
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
