--- a/data/rush/15168.yaml
+++ b/data/rush/15168.yaml
@@ -49,6 +49,10 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/SD0A-JP015
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/ST02-KR005
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
