--- a/data/rush/15797.yaml
+++ b/data/rush/15797.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Deck Mod Pack: Illusion Strike Mirage Impact!!'
     rarities:
     - Super Rare
+  - set_number: RD/SD0A-JP012
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP03-KR022
     set_name: 'Deck Mod Pack: Illusion Strike Mirage Impact!!'
