--- a/data/rush/18651.yaml
+++ b/data/rush/18651.yaml
@@ -40,4 +40,8 @@ sets:
     set_name: Battle Pack 2022 Vol.4
     rarities:
     - Common
+  - set_number: RD/SD0A-JP018
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 yugipedia_page_id: 714910
