--- a/data/cards/03137279.yaml
+++ b/data/cards/03137279.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  ja:
+  - set_number: WPP4-JP018
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
