--- a/data/cards/09416697.yaml
+++ b/data/cards/09416697.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Common
+  ja:
+  - set_number: WPP4-JP019
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
