--- a/data/cards/39522887.yaml
+++ b/data/cards/39522887.yaml
@@ -69,6 +69,11 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Super Rare
+  ja:
+  - set_number: WPP4-JP020
+    set_name: World Premiere Pack 2023
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
