--- a/data/cards/46037983.yaml
+++ b/data/cards/46037983.yaml
@@ -69,6 +69,11 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Ultra Rare
+  ja:
+  - set_number: WPP4-JP015
+    set_name: World Premiere Pack 2023
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
