--- a/data/cards/65898344.yaml
+++ b/data/cards/65898344.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Super Rare
+  ja:
+  - set_number: WPP4-JP028
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
