--- a/data/cards/65910922.yaml
+++ b/data/cards/65910922.yaml
@@ -76,6 +76,11 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Ultra Rare
+  ja:
+  - set_number: WPP4-JP021
+    set_name: World Premiere Pack 2023
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
