--- a/data/cards/72309040.yaml
+++ b/data/cards/72309040.yaml
@@ -98,6 +98,12 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Secret Rare
+  ja:
+  - set_number: WPP4-JP024
+    set_name: World Premiere Pack 2023
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
