--- a/data/cards/76133574.yaml
+++ b/data/cards/76133574.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Ultra Rare
+  ja:
+  - set_number: WPP4-JP017
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
