--- a/data/rush/15203.yaml
+++ b/data/rush/15203.yaml
@@ -68,6 +68,10 @@ sets:
     rarities:
     - Common
     - Super Rare
+  - set_number: RD/SD0A-JP024
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP01-KR031
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
