--- a/data/rush/16308.yaml
+++ b/data/rush/16308.yaml
@@ -45,6 +45,10 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
+  - set_number: RD/SD0A-JP016
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP05-KR001
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
