--- a/data/rush/16775.yaml
+++ b/data/rush/16775.yaml
@@ -41,6 +41,10 @@ sets:
     set_name: Strongest Battle Deck Luke - Dragon's Dragons
     rarities:
     - Common
+  - set_number: RD/SD0A-JP017
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/SBD2-KR012
     set_name: Strongest Battle Deck Luke - Dragon's Dragons
