--- a/data/rush/17198.yaml
+++ b/data/rush/17198.yaml
@@ -56,6 +56,10 @@ sets:
     rarities:
     - Ultra Rare
     - Gold Rush Rare
+  - set_number: RD/SD0A-JP011
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/GRP1-KR009
     set_name: Grand Rush Pack
