--- a/data/rush/yugipedia1011311.yaml
+++ b/data/rush/yugipedia1011311.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
+  - set_number: RD/SD0A-JPS04
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
