--- a/data/rush/yugipedia1012303.yaml
+++ b/data/rush/yugipedia1012303.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキのカードが１０枚以上の場合、手札のモンスター１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は３００ＬＰ回復する。自分の墓地にモンスター（レベル８）がいる場合、さらに自分は１枚ドローする。
   ko:
   zh-TW:
   zh-CN:
