--- a/rush.yaml
+++ b/rush.yaml
@@ -116161,7 +116161,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（攻撃力０）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -116173,7 +116174,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。自分の墓地に「はぐれ使い魔」がいる場合、さらに自分フィールドの表側表示モンスター（攻撃力０）１体を選ぶ事ができる。選んだ場合、このターン、そのモンスターは効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
